cloud9-alternative-cloudformation.yaml
AWSTemplateFormatVersion: '2010-09-09'

Parameters:
  InstanceType:
    Type: String
    Default: t2.micro

Mappings:
  Constants:
    Ec2:
      ImageId: '{{resolve:ssm:/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-x86_64}}'
    Vpc:
      CidrBlock: 10.0.0.0/16
      PublicSubnetCidrBlock: 10.0.0.0/24

Resources:
  Vpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !FindInMap [Constants, Vpc, CidrBlock]
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value: !Ref AWS::StackName
  VpcIgw:
    Type: AWS::EC2::InternetGateway
  VpcIgwAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref VpcIgw
      VpcId: !Ref Vpc

  VpcPublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
  VpcPublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref VpcPublicRouteTable
      GatewayId: !Ref VpcIgw
      DestinationCidrBlock: 0.0.0.0/0
    DependsOn:
      - VpcIgwAttachment

  VpcPublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      CidrBlock: !FindInMap [Constants, Vpc, PublicSubnetCidrBlock]
  VpcPublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref VpcPublicRouteTable
      SubnetId: !Ref VpcPublicSubnet

  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref Vpc
      GroupDescription: udemy-networking
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: 22
          ToPort: 22
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          IpProtocol: -1

  InstanceRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
        Version: 2012-10-17
      ManagedPolicyArns:
        - !Join
          - ''
          - - 'arn:'
            - Ref: 'AWS::Partition'
            - ':iam::aws:policy/AdministratorAccess'
  InstanceProfile:
    Type: 'AWS::IAM::InstanceProfile'
    Properties:
      Roles:
        - !Ref InstanceRole

  Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !FindInMap [Constants, Ec2, ImageId]
      InstanceType: !Ref InstanceType
      NetworkInterfaces:
        - SubnetId: !Ref VpcPublicSubnet
          AssociatePublicIpAddress: 'true'
          DeviceIndex: '0'
          GroupSet:
            - !Ref InstanceSecurityGroup
      IamInstanceProfile: !Ref InstanceProfile
      Tags:
        - Key: Name
          Value: !Ref AWS::StackName
      UserData: !Base64 |
        #!/bin/bash

        set -o errexit
        set -o nounset
        set -o pipefail
        set -o xtrace

        # Install Visual Studio Code
        # Reference: https://code.visualstudio.com/docs/setup/linux#_rhel-fedora-and-centos-based-distributions
        sudo rpm --import https://packages.microsoft.com/keys/microsoft.asc
        echo -e "[code]\nname=Visual Studio Code\nbaseurl=https://packages.microsoft.com/yumrepos/vscode\nenabled=1\ngpgcheck=1\ngpgkey=https://packages.microsoft.com/keys/microsoft.asc" | sudo tee /etc/yum.repos.d/vscode.repo > /dev/null
        dnf check-update
        sudo dnf install -y code
